Update SWEPUB - ORCID.ipynb

--- a/SWEPUB - ORCID.ipynb
+++ b/SWEPUB - ORCID.ipynb
@@ -5,69 +5,36 @@
    "metadata": {},
    "source": [
     "## SWEPUB - ORCID\n",
-    "version 0.6\n",
+    "version 0.7\n",
     "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/SWEPUB%20-%20ORCID.ipynb) \n",
     "* [Kundo question](https://kundo.se/org/swepub/d/api-for-amnesklassificering/#c3571837)\n",
     "* [datamodell/swepub-bibframe](https://www.kb.se/samverkan-och-utveckling/swepub/datamodell/swepub-bibframe.html)\n",
     "\n",
-    "see at the end where we find\n",
+    "see at the end where we find an ORCID looks like not every one has an ORCID\n",
     "* Magnus C Persson [0000-0003-1062-2789](https://orcid.org/0000-0003-1062-2789) he is same as [WD Q88134673](https://www.wikidata.org/wiki/Q88134673?uselang=sv) --> [Scholia](https://scholia.toolforge.org/author/Q88134673) ->\n",
     "  * [co-authors](https://tinyurl.com/yb65gf5m)\n",
-    "  * [graf](https://tinyurl.com/ycf8zc69)  \n"
+    "  * [graf](https://tinyurl.com/ycf8zc69)  \n",
+    "* Wikidata\n",
+    "  * ORCID [P496](https://www.wikidata.org/wiki/Property_talk:P496)\n",
+    "    * 0000-0002-5494-8126 --> WD query [haswbstatement:\"P356=0000-0002-5494-8126\"](https://www.wikidata.org/w/index.php?sort=relevance&search=haswbstatement%3A%22P496%3D0000-0002-5494-8126%22&title=Special:Search&profile=advanced&fulltext=1&advancedSearch-current=%7B%7D&ns0=1&ns120=1)\n",
+    "  * DOI [P356](https://www.wikidata.org/wiki/Property_talk:P356) on 25 609 492 objects\n",
+    "    * doi/10.1186/S13321-016-0161-3 --> WD query [haswbstatement:\"P356=10.1186/S13321-016-0161-3\"](https://www.wikidata.org/w/index.php?sort=relevance&search=haswbstatement%3A%22P356%3D10.1186%2FS13321-016-0161-3%22&title=Special:Search&profile=advanced&fulltext=1&advancedSearch-current=%7B%7D&ns0=1&ns120=1)\n",
+    "   * query using [SPARQL](https://w.wiki/X3h)  \n",
+    "   * [Scholia](https://scholia.toolforge.org/) - tool for citatkon graphs of data in Wikidata \n",
+    "      * DOI link [doi/10.1186/S13321-016-0161-3](https://scholia.toolforge.org/doi/10.1186/S13321-016-0161-3)\n",
+    "      * ORCID link [orcid/0000-0002-5494-8126](https://scholia.toolforge.org/orcid/0000-0002-5494-8126]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 14 19:57:46 2020\n",
-      "--- 10516.264034032822 seconds ---\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-5-cf58f4bebe27>:17: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n",
-      "  df_concat = pd.concat(chunk_list)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 11268.912825107574 seconds ---\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1505902 entries, 0 to 1505901\n",
-      "Data columns (total 15 columns):\n",
-      "@context                  1505902 non-null object\n",
-      "@id                       1505902 non-null object\n",
-      "@type                     1505902 non-null object\n",
-      "carrierType               975900 non-null object\n",
-      "editionStatement          22059 non-null object\n",
-      "extent                    170729 non-null object\n",
-      "hasSeries                 117001 non-null object\n",
-      "identifiedBy              1505902 non-null object\n",
-      "indirectlyIdentifiedBy    160 non-null object\n",
-      "instanceOf                1505902 non-null object\n",
-      "meta                      1505902 non-null object\n",
-      "partOf                    1193782 non-null object\n",
-      "provisionActivity         6695 non-null object\n",
-      "publication               1481484 non-null object\n",
-      "usageAndAccessPolicy      248495 non-null object\n",
-      "dtypes: object(15)\n",
-      "memory usage: 172.3+ MB\n"
+      "Thu Jul 16 07:42:24 2020\n"
      ]
     }
    ],
