--- a/SWEPUB - ORCID.ipynb
+++ b/SWEPUB - ORCID.ipynb
@@ -7,20 +7,25 @@
     "## SWEPUB - ORCID\n",
     "version 0.7\n",
     "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/SWEPUB%20-%20ORCID.ipynb) \n",
-    "* [Kundo question](https://kundo.se/org/swepub/d/api-for-amnesklassificering/#c3571837)\n",
-    "* [datamodell/swepub-bibframe](https://www.kb.se/samverkan-och-utveckling/swepub/datamodell/swepub-bibframe.html)\n",
-    "\n",
-    "see at the end where we find an ORCID looks like not every one has an ORCID\n",
+    "* SWEPUB\n",
+    "  * [Kundo question](https://kundo.se/org/swepub/d/api-for-amnesklassificering/#c3571837) were they recommend download the ZIP file to access data in SWEPUB --> JSON 10.81 Gbyte \n",
+    "  * [datamodell/swepub-bibframe](https://www.kb.se/samverkan-och-utveckling/swepub/datamodell/swepub-bibframe.html)\n",
+    "  * [Twitter SwePub](https://twitter.com/SwePub)\n",
+    "  * [SPARQL SWEPUB](https://github.com/libris/swepub-sparql) feels SPARQL is better than download a zipfile ?!?!?\n",
+    "    * [Finding nr records per schools ](http://virhp07.libris.kb.se/sparql/?default-graph-uri=&query=PREFIX+bmc%3A+%3Chttp%3A%2F%2Fswepub.kb.se%2Fbibliometric%2Fmodel%23%3E+%0D%0APREFIX+swpa_m%3A+%3Chttp%3A%2F%2Fswepub.kb.se%2FSwePubAnalysis%2Fmodel%23%3E%0D%0APREFIX+mods_m%3A+%3Chttp%3A%2F%2Fswepub.kb.se%2Fmods%2Fmodel%23%3E+%0D%0APREFIX+outt_m%3A+%3Chttp%3A%2F%2Fswepub.kb.se%2FSwePubAnalysis%2FOutputTypes%2Fmodel%23%3E%0D%0APREFIX+xlink%3A+%3Chttp%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%23%3E+%0D%0ASELECT+DISTINCT+xsd%3Astring%28%3F_orgName%29+COUNT%28DISTINCT+%3F_workID%29+as+%3Fc%0D%0AWHERE%0D%0A%7B%0D%0A%3FCreativeWork+bmc%3AlocalID+%3F_workID+.%0D%0A%3FPublication+bmc%3AlocalID+%3F_publicationID+.%0D%0A%0D%0A%3FOrganization+rdfs%3Alabel+%3F_orgName+.%0D%0AFILTER%28lang%28%3F_orgName%29+%3D+%27sv%27+%29%0D%0A%0D%0A%3FCreativeWork+bmc%3AreportedBy+%3FRecord+.%0D%0A%3FCreativeWork+a+bmc%3ACreativeWork+.%0D%0A%3FCreativeWork+bmc%3ApublishedAs+%3FPublication+.%0D%0A%0D%0A%23%3FCreativeWork+bmc%3ApublicationYearEarliest+%3F_pubYear+.%0D%0A%3FCreativeWork+bmc%3AhasCreatorShip+%3FCreatorShip+.%0D%0A%3FCreatorShip+bmc%3AhasAffiliation+%3FCreatorAffiliation+.%0D%0A%3FCreatorAffiliation+bmc%3AhasOrganization+%3FOrganization+.%0D%0A%0D%0A%3FCreatorShip+bmc%3AhasCreator+%3FCreator+.+%0D%0A%0D%0A%7D%0D%0AORDER+BY+xsd%3Astring%28%3F_orgName%29&format=text%2Fhtml&timeout=0&debug=on)\n",
+    "    * Finding persons with ORCID ???\n",
+    "  \n",
+    "see at the end where we find an ORCID in the JSON file looks like not everyone has an ORCID\n",
     "* Magnus C Persson [0000-0003-1062-2789](https://orcid.org/0000-0003-1062-2789) he is same as [WD Q88134673](https://www.wikidata.org/wiki/Q88134673?uselang=sv) --> [Scholia](https://scholia.toolforge.org/author/Q88134673) ->\n",
     "  * [co-authors](https://tinyurl.com/yb65gf5m)\n",
     "  * [graf](https://tinyurl.com/ycf8zc69)  \n",
     "* Wikidata\n",
-    "  * ORCID [P496](https://www.wikidata.org/wiki/Property_talk:P496)\n",
+    "  * ORCID property [P496](https://www.wikidata.org/wiki/Property_talk:P496)\n",
     "    * 0000-0002-5494-8126 --> WD query [haswbstatement:\"P356=0000-0002-5494-8126\"](https://www.wikidata.org/w/index.php?sort=relevance&search=haswbstatement%3A%22P496%3D0000-0002-5494-8126%22&title=Special:Search&profile=advanced&fulltext=1&advancedSearch-current=%7B%7D&ns0=1&ns120=1)\n",
-    "  * DOI [P356](https://www.wikidata.org/wiki/Property_talk:P356) on 25 609 492 objects\n",
+    "  * DOI property [P356](https://www.wikidata.org/wiki/Property_talk:P356) on 25 609 492 objects\n",
     "    * doi/10.1186/S13321-016-0161-3 --> WD query [haswbstatement:\"P356=10.1186/S13321-016-0161-3\"](https://www.wikidata.org/w/index.php?sort=relevance&search=haswbstatement%3A%22P356%3D10.1186%2FS13321-016-0161-3%22&title=Special:Search&profile=advanced&fulltext=1&advancedSearch-current=%7B%7D&ns0=1&ns120=1)\n",
     "   * query using [SPARQL](https://w.wiki/X3h)  \n",
-    "   * [Scholia](https://scholia.toolforge.org/) - tool for citatkon graphs of data in Wikidata \n",
+    "   * [Scholia](https://scholia.toolforge.org/) - tool for citation graphs of data in Wikidata \n",
     "      * DOI link [doi/10.1186/S13321-016-0161-3](https://scholia.toolforge.org/doi/10.1186/S13321-016-0161-3)\n",
     "      * ORCID link [orcid/0000-0002-5494-8126](https://scholia.toolforge.org/orcid/0000-0002-5494-8126]\n"
    ]
