--- a/Svenska Akademin.ipynb
+++ b/Svenska Akademin.ipynb
@@ -5,14 +5,17 @@
    "metadata": {},
    "source": [
     "## Svenska Akademin  - Wikidata\n",
-    "version 2\n",
+    "version 2.1\n",
     "\n",
     "WD egenskap [Property:P5325](https://www.wikidata.org/wiki/Property:P5325) \n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb)  \n",
     "\n",
-    "1. query Wikidata for people im the Swedish Academi\n",
+    " \n",
+    "1. query Wikidata for people im the Swedish Academy\n",
     "1. using [Property:P5325](https://www.wikidata.org/wiki/Property:P5325)  to access the page and webscrape some data\n",
-    "1. create ds with numbering and replace/replaced by \n"
+    "1. create ds with numbering and replace/replaced by\n",
+    "1. use Open Refine for connect it to WIkidata\n",
+    "1. batch upload using [Quickstatement](https://quickstatements.toolforge.org/#/)\n"
    ]
   },
   {
