--- a/Svenska Akademin.ipynb
+++ b/Svenska Akademin.ipynb
@@ -5,13 +5,15 @@
    "metadata": {},
    "source": [
     "## Svenska Akademin  - Wikidata\n",
-    "version 2.1\n",
+    "version 2.2\n",
     "\n",
     "WD egenskap [Property:P5325](https://www.wikidata.org/wiki/Property:P5325) \n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb)  \n",
-    "\n",
+    "* Wikidata [WikiProject_Sweden/Swedish_Academy](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Swedish_Academy)\n",
+    "  * SPARQL -> [objects maintained by the project](https://w.wiki/XTB)\n",
+    "----\n",
     " \n",
-    "1. query Wikidata for people im the Swedish Academy\n",
+    "1. [query Wikidata](https://w.wiki/XBp) for people im the Swedish Academy\n",
     "1. using [Property:P5325](https://www.wikidata.org/wiki/Property:P5325)  to access the page and webscrape some data\n",
     "1. create ds with numbering and replace/replaced by\n",
     "1. use Open Refine for connect it to WIkidata\n",
