Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
     "\n",
-    "* Denna [Jupityr Notebook]( \n",
+    "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
     "  * Wikidata ung. 1200 kopplingar SKBL 7/04/2020\n",
     "* SKBL databas [KARP](https://ws.spraakbanken.gu.se/ws/karp)\n",
