--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "1.0\n",
+    "1.2\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -25,10 +25,24 @@
     "        * se [video](https://www.youtube.com/watch?v=qwVL0OOEdkY)\n",
     "  * namnet blir idag lite grötigt med \"/vera/\" skapa hellre nya fält\n",
     "  * kontakter anges idag som textsträngar bättre med samma som ISNI, Wikidata Qnummer eller annat så vi kan enklare vara säkra på rätt person\n",
-    "  * idag länkar sv:Wikipedia se [video](https://www.youtube.com/watch?v=qwVL0OOEdkY)\n",
-    "    * med mall SKBL --> 358 artiklar --> 2019 antal visningar > [700 000](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:SKBL)\n",
-    "    * med mall Auktioritetsdata --> 1166 artiklar --> 2019 antal visningar > [3,3 miljoner](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%25C3%25A5n_SKBL)\n",
-    "    * vi borde kunna lyfta detta vidare och ha samma som för orter/församlingar/organisationer/skolor"
+    "  \n",
+    "## Statistik\n",
+    "* idag länkar sv:Wikipedia se [video](https://www.youtube.com/watch?v=qwVL0OOEdkY)\n",
+    "  * med mall SKBL --> 358 artiklar --> 2019 antal visningar > [700 000](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:SKBL)\n",
+    "  * med mall Auktioritetsdata --> 1166 artiklar --> 2019 antal visningar > [3,3 miljoner](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%25C3%25A5n_SKBL)\n",
+    "  * vi borde kunna lyfta detta vidare och ha samma som för orter/församlingar/organisationer/skolor\n",
+    "  \n",
+    "### sv:Wikipedia     \n",
+    "* Artiklar med [mall Auktoritetsdata men inte mall SKBL](https://petscan.wmflabs.org/?psid=17130440)\n",
+    "* SKBL kopplade poster som saknar sv:Wikipedia artikel\n",
+    "* SKBL artiklar som [saknar Auktoritetsdatamallen](https://petscan.wmflabs.org/?psid=17130486)\n",
+    "* SKBL artiklar som [saknar motsvarande artikel på sv:Wikipedia](https://w.wiki/Zui) \n",
+    "\n",
+    "### en:Wikipedia    \n",
+    "en:WIkipedia är en av världens 10 största siter så SKBLs engelska artiklar borde försöka länkas därifrån se [länk visningar](https://stats.wikimedia.org/v2/#/en.wikipedia.org)\n",
+    "* SKBL kopplade poster som har en:Wikipedia artikel\n",
+    "* borde tas fram en SKBL mall på engelsk WIkipedia som pekar på SKBLs engelska artikel\n",
+    "* kanske försöka få med SKBL i en:Wikipedia motsvarighet till Auktoritetsdata\n"
    ]
   },
   {
