--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "1.2\n",
+    "1.3\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -33,16 +33,23 @@
     "  * vi borde kunna lyfta detta vidare och ha samma som för orter/församlingar/organisationer/skolor\n",
     "  \n",
     "### sv:Wikipedia     \n",
-    "* Artiklar med [mall Auktoritetsdata men inte mall SKBL](https://petscan.wmflabs.org/?psid=17130440)\n",
-    "* SKBL kopplade poster som saknar sv:Wikipedia artikel\n",
+    "* SKBL kopplade poster som [saknar sv:Wikipedia artikel](https://w.wiki/Zun)\n",
     "* SKBL artiklar som [saknar Auktoritetsdatamallen](https://petscan.wmflabs.org/?psid=17130486)\n",
     "* SKBL artiklar som [saknar motsvarande artikel på sv:Wikipedia](https://w.wiki/Zui) \n",
     "\n",
     "### en:Wikipedia    \n",
     "en:WIkipedia är en av världens 10 största siter så SKBLs engelska artiklar borde försöka länkas därifrån se [länk visningar](https://stats.wikimedia.org/v2/#/en.wikipedia.org)\n",
-    "* SKBL kopplade poster som har en:Wikipedia artikel\n",
-    "* borde tas fram en SKBL mall på engelsk WIkipedia som pekar på SKBLs engelska artikel\n",
-    "* kanske försöka få med SKBL i en:Wikipedia motsvarighet till Auktoritetsdata\n"
+    "* SKBL kopplade poster som [har en:Wikipedia artikel](https://w.wiki/Zur) = 534 stycken \n",
+    "  * som [saknar en:Wikipedia artikel](https://w.wiki/Zup)\n",
+    "* borde tas fram en [SKBL mall](https://sv.wikipedia.org/wiki/Mall:SKBL) på engelsk Wikipedia som pekar på SKBLs engelska artikel\n",
+    "* borde försöka få med SKBL i en:Wikipedia motsvarighet till Auktoritetsdata [Template:Authority_control](https://en.wikipedia.org/wiki/Template:Authority_control)\n",
+    "\n",
+    "### ru:Wikipedia\n",
+    "video om hur [Wikipedia och olika språkversioner fungerar](https://youtu.be/GzJfXsdmfeU)\n",
+    "ryska WIkipedia har varit rel enkla att lyfta in Wikidata egenskaper dom har idag [länk visningar](https://stats.wikimedia.org/v2/#/ru.wikipedia.org) 806 M visningar per månad så det kan vara en utmaning\n",
+    "* SKBL kopplade poster som [har ru:Wikipedia artikel](https://w.wiki/Zus) = 568 stycken \n",
+    "  * som [saknar ru:Wikipedia artikel](https://w.wiki/Zup)\n",
+    "* Auktoritetsdata på ru:Wikipedia [Шаблон:Внешние ссылки](https://ru.wikipedia.org/wiki/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD:%D0%92%D0%BD%D0%B5%D1%88%D0%BD%D0%B8%D0%B5_%D1%81%D1%81%D1%8B%D0%BB%D0%BA%D0%B8)\n"
    ]
   },
   {
