--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.1\n",
+    "version 1.3.2\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -46,7 +46,7 @@
     "### ru:Wikipedia\n",
     "video om hur [Wikipedia och olika språkversioner fungerar](https://youtu.be/GzJfXsdmfeU)\n",
     "ryska WIkipedia har varit rel enkla att lyfta in Wikidata egenskaper dom har idag [länk visningar](https://stats.wikimedia.org/v2/#/ru.wikipedia.org) 806 M visningar per månad så det kan vara en utmaning\n",
-    "* SKBL kopplade poster som [har ru:Wikipedia artikel](https://w.wiki/Zus) = 568 stycken \n",
+    "* SKBL kopplade poster som [har ru:Wikipedia artikel](https://w.wiki/Zus) = 568 stycken samma men med [länk ru artikeln](https://w.wiki/Zuz)\n",
     "  * som [saknar ru:Wikipedia artikel](https://w.wiki/Zup)\n",
     "* Auktoritetsdata på ru:Wikipedia [Шаблон:Внешние ссылки](https://ru.wikipedia.org/wiki/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD:%D0%92%D0%BD%D0%B5%D1%88%D0%BD%D0%B8%D0%B5_%D1%81%D1%81%D1%8B%D0%BB%D0%BA%D0%B8)\n"
    ]
