--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.3\n",
+    "version 1.3.4.1\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -25,6 +25,12 @@
     "        * se [video](https://www.youtube.com/watch?v=qwVL0OOEdkY)\n",
     "  * namnet blir idag lite grötigt med \"/vera/\" skapa hellre nya fält\n",
     "  * kontakter anges idag som textsträngar bättre med samma som ISNI, Wikidata Qnummer eller annat så vi kan enklare vara säkra på rätt person\n",
+    "  * författare som exempel Brita Plank ange hennes Qnummer eller hennes ORCID\n",
+    "    * --> så kan vi enkelt ange rätt författare i Wikidata \n",
+    "      * Brita Planck = [WD Q96205230](https://www.wikidata.org/wiki/Q96205230?uselang=sv) ORCID [0000-0002-1043-7455](https://orcid.org/0000-0002-1043-7455)\n",
+    "      * Lisbeth Larsson [WD Q4961115](https://www.wikidata.org/wiki/Q4961115?uselang=sv) WD [graf](https://w.wiki/Zv8)\n",
+    "      * Marie Sjöberg [WD Q50383736](https://www.wikidata.org/wiki/Q50383736?uselang=sv) WD [graf](https://w.wiki/Zv7)\n",
+    "\n",
     "  \n",
     "## Statistik\n",
     "* idag länkar sv:Wikipedia se [video](https://www.youtube.com/watch?v=qwVL0OOEdkY)\n",
