Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.1\n",
+    "version 1.3.4.2\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -14,22 +14,26 @@
     "  * 1495 poster 7/04/2020\n",
     "  * 1512 poster 16/08/2020\n",
     "  \n",
+    "  Jag nås på 070-5937579 twitter: [salgo60](https://twitter.com/salgo60)\n",
+    "  \n",
     "### TODO\n",
     "* prata ihop oss med SKBL hur vi kan enklare använda varandras data\n",
     "  * församlingar skrivs idag ut i text i JSON filen med koordinat vore tydligare om ni hade ett Qnummer med exempel\n",
     "    * Borrby församling visas idag med text och \n",
     "    place: { parish: \"Borrby församling\", pin: { lat: 55.456944, lon: 14.180278 }.....\n",
     "    * vore tydligare om ni hade med\n",
-    "        * Wikipedia namnet \n",
-    "        * Wikipedia Q numret\n",
+    "        * unikt identifierade metadata som\n",
+    "          * sv:Wikipedia [Borrby_församling](https://sv.wikipedia.org/wiki/Borrby_f%C3%B6rsamling)  \n",
+    "          * Wikidata [Q10433305](https://www.wikidata.org/wiki/Q10433305?uselang=sv)\n",
+    "          * NAD nummer [SE/LLA/13038](https://sok.riksarkivet.se/?postid=ArkisRef%20SE/LLA/13038)\n",
     "        * se [video](https://www.youtube.com/watch?v=qwVL0OOEdkY)\n",
     "  * namnet blir idag lite grötigt med \"/vera/\" skapa hellre nya fält\n",
     "  * kontakter anges idag som textsträngar bättre med samma som ISNI, Wikidata Qnummer eller annat så vi kan enklare vara säkra på rätt person\n",
     "  * författare som exempel Brita Plank ange hennes Qnummer eller hennes ORCID\n",
     "    * --> så kan vi enkelt ange rätt författare i Wikidata \n",
-    "      * Brita Planck = [WD Q96205230](https://www.wikidata.org/wiki/Q96205230?uselang=sv) ORCID [0000-0002-1043-7455](https://orcid.org/0000-0002-1043-7455)\n",
-    "      * Lisbeth Larsson [WD Q4961115](https://www.wikidata.org/wiki/Q4961115?uselang=sv) WD [graf](https://w.wiki/Zv8)\n",
-    "      * Marie Sjöberg [WD Q50383736](https://www.wikidata.org/wiki/Q50383736?uselang=sv) WD [graf](https://w.wiki/Zv7)\n",
+    "      * Brita Planck = [WD Q96205230](https://www.wikidata.org/wiki/Q96205230?uselang=sv) ORCID [0000-0002-1043-7455](https://orcid.org/0000-0002-1043-7455) WD [graf](https://w.wiki/ZxA)\n",
+    "      * Lisbeth Larsson [WD Q4961115](https://www.wikidata.org/wiki/Q4961115?uselang=sv) ORCID ''missing'' WD [graf](https://w.wiki/Zv8)\n",
+    "      * Marie Sjöberg [WD Q50383736](https://www.wikidata.org/wiki/Q50383736?uselang=sv) ORCID ''missing'' WD [graf](https://w.wiki/Zv7)\n",
     "\n",
     "  \n",
     "## Statistik\n",
@@ -47,11 +51,12 @@
     "* SKBL kopplade poster som [har en:Wikipedia artikel](https://w.wiki/Zur) = 534 stycken \n",
     "  * som [saknar en:Wikipedia artikel](https://w.wiki/Zup)\n",
     "* borde tas fram en [SKBL mall](https://sv.wikipedia.org/wiki/Mall:SKBL) på engelsk Wikipedia som pekar på SKBLs engelska artikel\n",
+    "  * [Q98518115](https://www.wikidata.org/wiki/Q98518115)\n",
     "* borde försöka få med SKBL i en:Wikipedia motsvarighet till Auktoritetsdata [Template:Authority_control](https://en.wikipedia.org/wiki/Template:Authority_control)\n",
     "\n",
     "### ru:Wikipedia\n",
     "video om hur [Wikipedia och olika språkversioner fungerar](https://youtu.be/GzJfXsdmfeU)\n",
-    "ryska WIkipedia har varit rel enkla att lyfta in Wikidata egenskaper dom har idag [länk visningar](https://stats.wikimedia.org/v2/#/ru.wikipedia.org) 806 M visningar per månad så det kan vara en utmaning\n",
+    "ryska WIkipedia har varit rel enkla att lyfta in Wikidata egenskaper dom har idag [länk visningar](https://stats.wikimedia.org/v2/#/ru.wikipedia.org) 806 M visningar per månad så det kan vara ett spännande möte\n",
     "* SKBL kopplade poster som [har ru:Wikipedia artikel](https://w.wiki/Zus) = 568 stycken samma men med [länk ru artikeln](https://w.wiki/Zuz)\n",
     "  * som [saknar ru:Wikipedia artikel](https://w.wiki/Zup)\n",
     "* Auktoritetsdata på ru:Wikipedia [Шаблон:Внешние ссылки](https://ru.wikipedia.org/wiki/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD:%D0%92%D0%BD%D0%B5%D1%88%D0%BD%D0%B8%D0%B5_%D1%81%D1%81%D1%8B%D0%BB%D0%BA%D0%B8)\n",
@@ -64,7 +69,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Check diff SKBL Wikidata "
+    "# Check diff SKBL Wikidata \n",
+    "ett försök att hålla Wikidata / SKBL i fas \n",
+    "* [KARP APIet](https://spraakbanken.gu.se/verktyg/karp/webb-api)\n",
+    "* se tidigare försök att ha ISNI i synk [T219700](https://phabricator.wikimedia.org/T219700), GITHUB [salgo60/SKBLWikidata](https://github.com/salgo60/SKBLWikidata) \n",
+    "  * mar 2019 kommentar om [platser i SKBL](https://phabricator.wikimedia.org/T218782)"
    ]
   },
   {
