--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.2\n",
+    "version 1.3.4.4\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -47,13 +47,19 @@
     "* SKBL artiklar som [saknar Auktoritetsdatamallen](https://petscan.wmflabs.org/?psid=17130486)\n",
     "\n",
     "### en:Wikipedia    \n",
-    "en:WIkipedia är en av världens 10 största siter så SKBLs engelska artiklar borde försöka länkas därifrån se [länk visningar](https://stats.wikimedia.org/v2/#/en.wikipedia.org)\n",
-    "* SKBL kopplade poster som [har en:Wikipedia artikel](https://w.wiki/Zur) = 534 stycken \n",
+    "en:Wikipedia är en av världens 10 största siter så SKBLs engelska artiklar borde försöka länkas därifrån se [länk visningar](https://stats.wikimedia.org/v2/#/en.wikipedia.org)\n",
+    "* SKBL kopplade poster som [har en:Wikipedia artikel](https://w.wiki/ZxJ) = 534 stycken \n",
     "  * som [saknar en:Wikipedia artikel](https://w.wiki/Zup)\n",
-    "* borde tas fram en [SKBL mall](https://sv.wikipedia.org/wiki/Mall:SKBL) på engelsk Wikipedia som pekar på SKBLs engelska artikel\n",
-    "  * [Q98518115](https://www.wikidata.org/wiki/Q98518115)\n",
-    "* borde försöka få med SKBL i en:Wikipedia motsvarighet till Auktoritetsdata [Template:Authority_control](https://en.wikipedia.org/wiki/Template:Authority_control)\n",
+    "* ~~ borde tas fram en [SKBL mall](https://sv.wikipedia.org/wiki/Mall:SKBL) på engelsk Wikipedia som pekar på SKBLs engelska artikel~~\n",
+    "  * [Q98518115](https://www.wikidata.org/wiki/Q98518115)  \n",
+    "* borde försöka få med SKBL i en:Wikipedia motsvarighet till Auktoritetsdata [Template:Authority_control](https://en.wikipedia.org/wiki/Template:Authority_control)  \n",
     "\n",
+    "#### SKBL template  live  \n",
+    "Update its iive se [video](https://youtu.be/a8Uty1etPdQ) \n",
+    "* Mall SKBL finns nu på en:Wikipedia se [Template:SKBL](https://en.wikipedia.org/wiki/Template:SKBL) \n",
+    "  * används på sidorna -> [Category:SKBL_template_using_Wikidata_property_P4963](https://en.wikipedia.org/wiki/Category:SKBL_template_using_Wikidata_property_P4963)\n",
+    "  * [visningsstatistik på dessa sidor](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://en.wikipedia.org/wiki/Category:SKBL_template_using_Wikidata_property_P4963)\n",
+    "  \n",
     "### ru:Wikipedia\n",
     "video om hur [Wikipedia och olika språkversioner fungerar](https://youtu.be/GzJfXsdmfeU)\n",
     "ryska WIkipedia har varit rel enkla att lyfta in Wikidata egenskaper dom har idag [länk visningar](https://stats.wikimedia.org/v2/#/ru.wikipedia.org) 806 M visningar per månad så det kan vara ett spännande möte\n",
