Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.10\n",
+    "version 1.3.4.12\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -20,8 +20,7 @@
     "  \n",
     "### TODO\n",
     "* bättre API fråga så alla returneras skickat fråga GITHUB [issue 22](https://github.com/spraakbanken/skbl-portal/issues/22)\n",
-    "* prata ihop oss med SKBL hur vi kan enklare använda varandras data\n",
-    "  * får en känsla ab detta är ett projekt som snart avslutas dvs. för sent....\n",
+    "* prata ihop oss med SKBL hur vi kan enklare använda varandras data - får en känsla av att detta är ett projekt som snart avslutas dvs. för sent....\n",
     "  * församlingar skrivs idag ut i text i JSON filen med koordinat vore tydligare om ni hade ett Qnummer med exempel\n",
     "    * Borrby församling visas idag med text och \n",
     "    place: { parish: \"Borrby församling\", pin: { lat: 55.456944, lon: 14.180278 }.....\n",
@@ -43,7 +42,7 @@
     "## Statistik\n",
     "* idag länkar sv:Wikipedia se [video](https://www.youtube.com/watch?v=qwVL0OOEdkY)\n",
     "  * med mall SKBL --> [456 artiklar](https://sv.wikipedia.org/wiki/Kategori:SKBL) --> 2019 antal visningar > [1 700 000](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:SKBL)\n",
-    "  * med mall Auktioritetsdata --> [1227 artiklar](https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%C3%A5n_SKBL) --> 2019 antal visningar > [3,3 miljoner](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%25C3%25A5n_SKBL)\n",
+    "  * med mall Auktioritetsdata --> [1379 artiklar](https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%C3%A5n_SKBL) --> 2019 antal visningar > [3,4 miljoner](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%25C3%25A5n_SKBL)\n",
     "  * vi borde kunna lyfta detta vidare och ha samma som för orter/församlingar/organisationer/skolor\n",
     "  \n",
     "### sv:Wikipedia     \n",
