--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,13 +5,27 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.13\n",
+    "version 1.3.4.14\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
-    "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
+    "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
     "  * Wikidata ung. 1200 kopplingar SKBL 7/04/2020\n",
     "  * Wikidata 1449 SKBL 20/08/2020\n",
-    "* SKBL databas [KARP](https://ws.spraakbanken.gu.se/ws/karp)\n",
+    "  * Wikidata [1451 SKBL 21/08/2020](https://w.wiki/a4w )\n",
+    "    * antal språk WIkipedia har åtminstone [en artikel om en kvinna på SKBL = 144](https://w.wiki/a4z)\n",
+    "    * andra externa WD [egenskaper där SKBL finns](https://w.wiki/9vW )\n",
+    "    * andra WD [egenskaper där SKBL finns](https://w.wiki/a54)\n",
+    "    * karta SKBL personer födda/döda begravda [som WD vet](https://tinyurl.com/SKBLmap)\n",
+    "    * karta begravda [Norra Begravningsplatsen Sthlm](https://tinyurl.com/SKBLgrave)\n",
+    "    * platser uppkallade efter en [SKBL person](https://tinyurl.com/y9qv8omv) \n",
+    "    * SKBL person som [fyller år idag](https://tinyurl.com/y7u2sjdw) \n",
+    "    * deltagit i [Olympiska spel](https://tinyurl.com/ybpnrrgm)  \n",
+    "    * målningar med CC-0 som finns i WIkicommon [skapade av SKBL person](https://t.co/8yxATKmoDJ) \n",
+    "    * lista med källor från [Kyrkböcker Wikidata har för personer i SKBL](https://w.wiki/a58) \n",
+    "    * lista hur [många språk SKBL personerna finns på i Wikipedia](https://tinyurl.com/yaqx9jl2) \n",
+    "    * avlidna svenska kvinnor med mest artiklar i Wikipedia [men ej finns hos SKBL](http://tinyurl.com/y6s2wvc2)\n",
+    "    * senaste ändringar i [Wikidata för SKBL person](https://tinyurl.com/SKBLc) jmf. [Change Stream WD](https://tools.wmflabs.org/wikidata-todo/rcvis.html)\n",
+    "* SKBL databas [KARP](https://ws.spraakbanken.gu.se/ws/karp) \n",
     "  * 1495 poster 7/04/2020\n",
     "  * 1512 poster 16/08/2020\n",
     "  * 1517 poster 20/08/2020 (är fel pga dålig API fråga)\n",
