Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.14\n",
+    "version 1.3.4.15\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -13,13 +13,15 @@
     "  * Wikidata 1449 SKBL 20/08/2020\n",
     "  * Wikidata [1451 SKBL 21/08/2020](https://w.wiki/a4w )\n",
     "    * antal språk WIkipedia har åtminstone [en artikel om en kvinna på SKBL = 144](https://w.wiki/a4z)\n",
-    "    * andra externa WD [egenskaper där SKBL finns](https://w.wiki/9vW )\n",
-    "    * andra WD [egenskaper där SKBL finns](https://w.wiki/a54)\n",
+    "    * andra externa WD [egenskaper där SKBL finns](https://w.wiki/9wN )\n",
+    "    * alla WD [egenskaper där SKBL finns](https://w.wiki/a6i)\n",
     "    * karta SKBL personer födda/döda begravda [som WD vet](https://tinyurl.com/SKBLmap)\n",
     "    * karta begravda [Norra Begravningsplatsen Sthlm](https://tinyurl.com/SKBLgrave)\n",
     "    * platser uppkallade efter en [SKBL person](https://tinyurl.com/y9qv8omv) \n",
     "    * SKBL person som [fyller år idag](https://tinyurl.com/y7u2sjdw) \n",
     "    * deltagit i [Olympiska spel](https://tinyurl.com/ybpnrrgm)  \n",
+    "    * finns på [Spotify](https://w.wiki/a6j)  \n",
+    "    * finns på [SVT Öppen kanal](https://w.wiki/a6m)  \n",
     "    * målningar med CC-0 som finns i WIkicommon [skapade av SKBL person](https://t.co/8yxATKmoDJ) \n",
     "    * lista med källor från [Kyrkböcker Wikidata har för personer i SKBL](https://w.wiki/a58) \n",
     "    * lista hur [många språk SKBL personerna finns på i Wikipedia](https://tinyurl.com/yaqx9jl2) \n",
@@ -55,7 +57,7 @@
     "  \n",
     "## Statistik\n",
     "* idag länkar sv:Wikipedia se [video](https://www.youtube.com/watch?v=qwVL0OOEdkY)\n",
-    "  * med mall SKBL --> [456 artiklar](https://sv.wikipedia.org/wiki/Kategori:SKBL) --> 2019 antal visningar > [1 700 000](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:SKBL)\n",
+    "  * med mall SKBL --> [489 artiklar](https://sv.wikipedia.org/wiki/Kategori:SKBL) --> 2019 antal visningar > [1 700 000](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:SKBL)\n",
     "  * med mall Auktioritetsdata --> [1379 artiklar](https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%C3%A5n_SKBL) --> 2019 antal visningar > [3,4 miljoner](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%25C3%25A5n_SKBL)\n",
     "  * vi borde kunna lyfta detta vidare och ha samma som för orter/församlingar/organisationer/skolor\n",
     "  \n",
