Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -22,7 +22,7 @@
     "    * deltagit i [Olympiska spel](https://tinyurl.com/ybpnrrgm)  \n",
     "    * finns på [Spotify](https://w.wiki/a6j)  \n",
     "    * finns på [SVT Öppen kanal](https://w.wiki/a6m)  \n",
-    "    * motioner skrivna i Riksdagen [av en kvinna på SKBL](https://w.wiki/a6o)\n",
+    "    * motioner skrivna i Riksdagen [av en kvinna på SKBL](https://w.wiki/a6q)\n",
     "    * målningar med CC-0 som finns i WIkicommon [skapade av SKBL person](https://t.co/8yxATKmoDJ) \n",
     "    * lista med källor från [Kyrkböcker Wikidata har för personer i SKBL](https://w.wiki/a58) \n",
     "    * lista hur [många språk SKBL personerna finns på i Wikipedia](https://tinyurl.com/yaqx9jl2) \n",
