--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -23,6 +23,7 @@
     "    * finns på [Spotify](https://w.wiki/a6j)  \n",
     "    * finns på [SVT Öppen kanal](https://w.wiki/a6m)  \n",
     "    * motioner skrivna i Riksdagen [av en kvinna på SKBL](https://w.wiki/a6q)\n",
+    "      * vilka som skrev motioner ihop med en person i SKBL (som WD vet om)\n",
     "    * målningar med CC-0 som finns i WIkicommon [skapade av SKBL person](https://t.co/8yxATKmoDJ) \n",
     "    * lista med källor från [Kyrkböcker Wikidata har för personer i SKBL](https://w.wiki/a58) \n",
     "    * lista hur [många språk SKBL personerna finns på i Wikipedia](https://tinyurl.com/yaqx9jl2) \n",
