Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.16\n",
+    "version 1.3.4.18\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -23,7 +23,7 @@
     "    * finns på [Spotify](https://w.wiki/a6j)  \n",
     "    * finns på [SVT Öppen kanal](https://w.wiki/a6m)  \n",
     "    * motioner skrivna i Riksdagen [av en kvinna på SKBL](https://w.wiki/a6q)\n",
-    "      * vilka som skrev motioner ihop med en person i SKBL (som WD vet om)\n",
+    "      * vilka som skrev motioner [ihop med en person i SKBL](https://w.wiki/a6r) (som WD vet om)\n",
     "    * målningar med CC-0 som finns i WIkicommon [skapade av SKBL person](https://t.co/8yxATKmoDJ) \n",
     "    * lista med källor från [Kyrkböcker Wikidata har för personer i SKBL](https://w.wiki/a58) \n",
     "    * lista hur [många språk SKBL personerna finns på i Wikipedia](https://tinyurl.com/yaqx9jl2) \n",
