Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.19\n",
+    "version 1.3.4.20\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -25,7 +25,8 @@
     "    * motioner skrivna i Riksdagen [av en kvinna på SKBL](https://w.wiki/a6q)\n",
     "      * vilka som skrev motioner [ihop med en person i SKBL](https://w.wiki/a6r) (som WD vet om)\n",
     "      * verktyget Scholia som används för citation graphs m en fungerar för ex. [scholia.toolforge.org Anna Lind](https://scholia.toolforge.org/author/Q208591)\n",
-    "        * hennes [co-author graph](https://w.wiki/a7F)\n",
+    "        * hennes [co-author graph](https://w.wiki/a7F) samma men visa [parti](https://w.wiki/a7N)  \n",
+    "          * jmf [Karin Andersson](https://w.wiki/a7L)\n",
     "    * målningar med CC-0 som finns i WIkicommon [skapade av SKBL person](https://t.co/8yxATKmoDJ) \n",
     "    * lista med källor från [Kyrkböcker Wikidata har för personer i SKBL](https://w.wiki/a58) \n",
     "    * lista hur [många språk SKBL personerna finns på i Wikipedia](https://tinyurl.com/yaqx9jl2) \n",
