--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -10,7 +10,9 @@
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
     "  * Wikidata ung. 1200 kopplingar SKBL 7/04/2020\n",
-    "  *  Wikidata 1449 SKBL 20/08/2020\n",
+    "    *  1450 WD <-> SKBL 20/08/2020\n",
+    "      * WD items sorterade efter [antal egenskapr i WD](https://w.wiki/a7g) \n",
+    "        * sortera\n",
     "  * Wikidata [1451 SKBL 21/08/2020](https://w.wiki/a4w )\n",
     "    * antal språk WIkipedia har åtminstone [en artikel om en kvinna på SKBL = 144](https://w.wiki/a4z)\n",
     "    * andra externa WD [egenskaper där SKBL finns](https://w.wiki/9wN )\n",
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +345,7 @@
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +414,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
