Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -11,8 +11,8 @@
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
     "  * Wikidata ung. 1200 kopplingar SKBL 7/04/2020\n",
     "    *  1450 WD <-> SKBL 20/08/2020\n",
-    "      * WD items sorterade efter [antal egenskapr i WD](https://w.wiki/a7g) \n",
-    "        * sortera\n",
+    "      * WD items sorterade efter [antal egenskaper i WD](https://w.wiki/a7g) \n",
+    "        * sorterade efter [sitelinks](https://w.wiki/a7i)\n",
     "  * Wikidata [1451 SKBL 21/08/2020](https://w.wiki/a4w )\n",
     "    * antal språk WIkipedia har åtminstone [en artikel om en kvinna på SKBL = 144](https://w.wiki/a4z)\n",
     "    * andra externa WD [egenskaper där SKBL finns](https://w.wiki/9wN )\n",
@@ -42,7 +42,7 @@
     "  Jag nås på 070-5937579 twitter: [salgo60](https://twitter.com/salgo60)\n",
     "  \n",
     "### TODO\n",
-    "* bättre API fråga så alla returneras skickat fråga GITHUB [issue 22](https://github.com/spraakbanken/skbl-portal/issues/22)\n",
+    "* bättre API fråga till SKBL behövs så alla returneras skickat fråga GITHUB [issue 22](https://github.com/spraakbanken/skbl-portal/issues/22) om hjälp\n",
     "* prata ihop oss med SKBL hur vi kan enklare använda varandras data - får en känsla av att detta är ett projekt som snart avslutas dvs. för sent....\n",
     "  * församlingar skrivs idag ut i text i JSON filen med koordinat vore tydligare om ni hade ett Qnummer med exempel\n",
     "    * Borrby församling visas idag med text och \n",
