--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.20\n",
+    "version 1.3.4.21\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -26,7 +26,7 @@
     "    * finns på [SVT Öppen kanal](https://w.wiki/a6m)  \n",
     "    * motioner skrivna i Riksdagen [av en kvinna på SKBL](https://w.wiki/a6q)\n",
     "      * vilka som skrev motioner [ihop med en person i SKBL](https://w.wiki/a6r) (som WD vet om)\n",
-    "      * verktyget Scholia som används för citation graphs m en fungerar för ex. [scholia.toolforge.org Anna Lind](https://scholia.toolforge.org/author/Q208591)\n",
+    "      * verktyget Scholia som används för citation graphs men fungerar för riksdagspersoner ex. [scholia.toolforge.org Anna Lind](https://scholia.toolforge.org/author/Q208591)\n",
     "        * hennes [co-author graph](https://w.wiki/a7F) samma men visa [parti](https://w.wiki/a7N)  \n",
     "          * jmf [Karin Andersson](https://w.wiki/a7L)\n",
     "    * målningar med CC-0 som finns i WIkicommon [skapade av SKBL person](https://t.co/8yxATKmoDJ) \n",
@@ -34,6 +34,9 @@
     "    * lista hur [många språk SKBL personerna finns på i Wikipedia](https://tinyurl.com/yaqx9jl2) \n",
     "    * avlidna svenska kvinnor med mest artiklar i Wikipedia [men ej finns hos SKBL](http://tinyurl.com/y6s2wvc2)\n",
     "    * senaste ändringar i [Wikidata för SKBL person](https://tinyurl.com/SKBLc) jmf. [Change Stream WD](https://tools.wmflabs.org/wikidata-todo/rcvis.html)\n",
+    "  * Test Kepler.gl\n",
+    "    * [Test sida](https://salgo60.github.io/SKBLWikidata/web/)\n",
+    "    * Hur detta skapas se [Jupyter](https://github.com/salgo60/FactGrid/blob/master/SKBL%20-%3E%20Kepler.gl.ipynb) och [datafil](https://github.com/salgo60/SKBLWikidata/blob/master/web/SKBL.geojson) / [raw](https://raw.githubusercontent.com/salgo60/SKBLWikidata/master/web/SKBL.geojson)\n",
     "* SKBL databas [KARP](https://ws.spraakbanken.gu.se/ws/karp) \n",
     "  * 1495 poster 7/04/2020\n",
     "  * 1512 poster 16/08/2020\n",
@@ -87,7 +90,8 @@
     "  * [visningsstatistik på dessa sidor](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://en.wikipedia.org/wiki/Category:SKBL_template_using_Wikidata_property_P4963) > 4 milj hitills 2019, 2018 > [5,8 miljoner visningar](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=last-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://en.wikipedia.org/wiki/Category:SKBL_template_using_Wikidata_property_P4963)\n",
     "* SKBL artiklar på en:Wikipedia som [saknar SKBL mallen](https://petscan.wmflabs.org/?psid=17136250)\n",
     "  * idag finns 680 en:Wikipedia artiklar som i Wikidata har koppling SKBL se [Petscan fråga](https://petscan.wmflabs.org/?psid=17144813)\n",
-    "    * video hur [petscan sparql fungerar](https://youtu.be/hOIOc3SKKW4)  \n",
+    "    * video hur [petscan sparql fungerar](https://youtu.be/hOIOc3SKKW4) \n",
+    "    * en:Wikipedia sidor som sknar mall [Template:SKBL](https://en.wikipedia.org/wiki/Template:SKBL) [petscan 17154918](https://petscan.wmflabs.org/?psid=17154918)\n",
     "    \n",
     "### ru:Wikipedia\n",
     "video om hur [Wikipedia och olika språkversioner fungerar](https://youtu.be/GzJfXsdmfeU)\n",
